--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
+    "com.unity.2d.animation": "5.0.10",
+    "com.unity.2d.pixel-perfect": "4.0.1",
+    "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "5.1.7",
+    "com.unity.2d.tilemap": "1.0.0",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
